<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_title_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/title"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/enter_title_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/choose_time"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/enter_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_geolocation"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/setup_time" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/okBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_location" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noBtn"
        app:layout_constraintTop_toBottomOf="@+id/setup_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
